--- a/newsclient/App/Supporting Files/Info.plist
+++ b/newsclient/App/Supporting Files/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Juhe API Base Url</key>
+	<string>$(SERVER_URL)</string>
+	<key>Amplitude API Key</key>
+	<string>$(AMPLITUDE_API_KEY)</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
